--- a/app/manifest.json
+++ b/app/manifest.json
@@ -187,171 +187,171 @@
       "sizes": "40x40"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-44.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-44.png",
       "sizes": "44x44"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-48.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-48.png",
       "sizes": "48x48"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-60.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-60.png",
       "sizes": "60x60"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-64.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-64.png",
       "sizes": "64x64"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-72.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-72.png",
       "sizes": "72x72"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-80.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-80.png",
       "sizes": "80x80"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-96.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-96.png",
       "sizes": "96x96"
     },
     {
-      "src": "windows11/Square44x44Logo.targetsize-256.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.targetsize-256.png",
       "sizes": "256x256"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-16.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-16.png",
       "sizes": "16x16"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-20.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-20.png",
       "sizes": "20x20"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-24.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-24.png",
       "sizes": "24x24"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-30.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-30.png",
       "sizes": "30x30"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-32.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-32.png",
       "sizes": "32x32"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-36.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-36.png",
       "sizes": "36x36"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-40.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-40.png",
       "sizes": "40x40"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-44.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-44.png",
       "sizes": "44x44"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-48.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-48.png",
       "sizes": "48x48"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-60.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-60.png",
       "sizes": "60x60"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-64.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-64.png",
       "sizes": "64x64"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-72.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-72.png",
       "sizes": "72x72"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-80.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-80.png",
       "sizes": "80x80"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-96.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-96.png",
       "sizes": "96x96"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-unplated_targetsize-256.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-unplated_targetsize-256.png",
       "sizes": "256x256"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-16.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-16.png",
       "sizes": "16x16"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-20.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-20.png",
       "sizes": "20x20"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-24.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-24.png",
       "sizes": "24x24"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-30.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-30.png",
       "sizes": "30x30"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-32.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-32.png",
       "sizes": "32x32"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-36.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-36.png",
       "sizes": "36x36"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-40.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-40.png",
       "sizes": "40x40"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-44.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-44.png",
       "sizes": "44x44"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-48.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-48.png",
       "sizes": "48x48"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-60.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-60.png",
       "sizes": "60x60"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-64.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-64.png",
       "sizes": "64x64"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-72.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-72.png",
       "sizes": "72x72"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-80.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-80.png",
       "sizes": "80x80"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-96.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-96.png",
       "sizes": "96x96"
     },
     {
-      "src": "windows11/Square44x44Logo.altform-lightunplated_targetsize-256.png",
+      "src": "https://codmonar.github.io/a/app/windows11/Square44x44Logo.altform-lightunplated_targetsize-256.png",
       "sizes": "256x256"
     },
     {
-      "src": "android/android-launchericon-512-512.png",
+      "src": "https://codmonar.github.io/a/app/android/android-launchericon-512-512.png",
       "sizes": "512x512"
     },
     {
-      "src": "android/android-launchericon-192-192.png",
+      "src": "https://codmonar.github.io/a/app/android/android-launchericon-192-192.png",
       "sizes": "192x192"
     },
     {
-      "src": "android/android-launchericon-144-144.png",
+      "src": "https://codmonar.github.io/a/app/android/android-launchericon-144-144.png",
       "sizes": "144x144"
     },
     {
-      "src": "android/android-launchericon-96-96.png",
+      "src": "https://codmonar.github.io/a/app/android/android-launchericon-96-96.png",
       "sizes": "96x96"
     },
     {
@@ -466,9 +466,7 @@
       "src": "ios/1024.png",
       "sizes": "1024x1024"
     }
-  ]
-}
-],
+  ],
     "shortcuts": [],
     "display_override": [
         "standalone",
